[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scenes/LogicQuestC.gd" id="1_script"]
[ext_resource type="Theme" path="res://ui/theme_noir_detective.tres" id="2_theme"]
[ext_resource type="PackedScene" path="res://ui/overlays/NoirOverlay.tscn" id="3_noir"]
[ext_resource type="Script" path="res://ui/overlays/NoirOverlay.gd" id="4_a03yj"]

[node name="LogicQuestC" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.07, 0.08, 1)

[node name="NoirOverlay" type="CanvasLayer" parent="." instance=ExtResource("3_noir")]
layer = 100
script = ExtResource("4_a03yj")
intensity = 0.18
fx_quality = 1
tint_color = Color(0.93, 0.93, 0.93, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="MainLayout" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Header" type="HBoxContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
alignment = 1

[node name="BtnBack" type="Button" parent="SafeArea/MainLayout/Header"]
custom_minimum_size = Vector2(120, 56)
layout_mode = 2
text = "НАЗАД"

[node name="LblClueTitle" type="Label" parent="SafeArea/MainLayout/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "ДЕТЕКТОР ЛЖИ C-01"

[node name="LblSessionId" type="Label" parent="SafeArea/MainLayout/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "СЕССИЯ: 00/00 • CASE C_00"
horizontal_alignment = 2

[node name="BarsRow" type="HBoxContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
alignment = 1

[node name="FactsBar" type="ProgressBar" parent="SafeArea/MainLayout/BarsRow"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="EnergyBar" type="ProgressBar" parent="SafeArea/MainLayout/BarsRow"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="TargetDisplay" type="PanelContainer" parent="SafeArea/MainLayout"]
layout_mode = 2

[node name="LblTarget" type="Label" parent="SafeArea/MainLayout/TargetDisplay"]
layout_mode = 2
text = "ШАГ 1/3: выберите патч"
horizontal_alignment = 1

[node name="TerminalFrame" type="PanelContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="TerminalScroll" type="ScrollContainer" parent="SafeArea/MainLayout/TerminalFrame"]
layout_mode = 2

[node name="TerminalRichText" type="RichTextLabel" parent="SafeArea/MainLayout/TerminalFrame/TerminalScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[b]БРИФИНГ[/b]"
fit_content = true

[node name="InteractionRow" type="HBoxContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="ExprSlot" type="PanelContainer" parent="SafeArea/MainLayout/InteractionRow"]
custom_minimum_size = Vector2(360, 108)
layout_mode = 2
size_flags_horizontal = 3

[node name="ExprVBox" type="VBoxContainer" parent="SafeArea/MainLayout/InteractionRow/ExprSlot"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ExprTitle" type="Label" parent="SafeArea/MainLayout/InteractionRow/ExprSlot/ExprVBox"]
layout_mode = 2
text = "CURRENT CONDITION"
horizontal_alignment = 1

[node name="ExprValue" type="RichTextLabel" parent="SafeArea/MainLayout/InteractionRow/ExprSlot/ExprVBox"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[b]A[/b]"
fit_content = true

[node name="PatchSlot" type="PanelContainer" parent="SafeArea/MainLayout/InteractionRow"]
custom_minimum_size = Vector2(360, 108)
layout_mode = 2
size_flags_horizontal = 3

[node name="PatchVBox" type="VBoxContainer" parent="SafeArea/MainLayout/InteractionRow/PatchSlot"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PatchTitle" type="Label" parent="SafeArea/MainLayout/InteractionRow/PatchSlot/PatchVBox"]
layout_mode = 2
text = "PATCH SLOT"
horizontal_alignment = 1

[node name="PatchValue" type="Label" parent="SafeArea/MainLayout/InteractionRow/PatchSlot/PatchVBox"]
layout_mode = 2
text = "PATCH: EMPTY"
horizontal_alignment = 1

[node name="LoadSlot" type="PanelContainer" parent="SafeArea/MainLayout/InteractionRow"]
custom_minimum_size = Vector2(280, 108)
layout_mode = 2
size_flags_horizontal = 3

[node name="LoadVBox" type="VBoxContainer" parent="SafeArea/MainLayout/InteractionRow/LoadSlot"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LoadTitle" type="Label" parent="SafeArea/MainLayout/InteractionRow/LoadSlot/LoadVBox"]
layout_mode = 2
text = "LOAD"
horizontal_alignment = 1

[node name="LoadBar" type="ProgressBar" parent="SafeArea/MainLayout/InteractionRow/LoadSlot/LoadVBox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="LoadLabel" type="Label" parent="SafeArea/MainLayout/InteractionRow/LoadSlot/LoadVBox"]
layout_mode = 2
text = "LOAD: 0 / 0"
horizontal_alignment = 1

[node name="InventoryFrame" type="PanelContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.55

[node name="InventoryMargin" type="MarginContainer" parent="SafeArea/MainLayout/InventoryFrame"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="InventoryScroll" type="ScrollContainer" parent="SafeArea/MainLayout/InventoryFrame/InventoryMargin"]
layout_mode = 2

[node name="PatchContainer" type="VBoxContainer" parent="SafeArea/MainLayout/InventoryFrame/InventoryMargin/InventoryScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="StatusRow" type="HBoxContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="StatsLabel" type="Label" parent="SafeArea/MainLayout/StatusRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ПОП: 0/3 • СКАНЫ: 0 • СТАБ: 100%"

[node name="FeedbackLabel" type="Label" parent="SafeArea/MainLayout/StatusRow"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "..."
horizontal_alignment = 2

[node name="Actions" type="HBoxContainer" parent="SafeArea/MainLayout"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="BtnHint" type="Button" parent="SafeArea/MainLayout/Actions"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ПОДСКАЗКА"

[node name="BtnScan" type="Button" parent="SafeArea/MainLayout/Actions"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "СКАН"

[node name="BtnNext" type="Button" parent="SafeArea/MainLayout/Actions"]
visible = false
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ДАЛЕЕ"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]

[node name="DiagnosticsBlocker" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45)

[node name="DiagnosticsPanelC" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -210.0
offset_right = 360.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupMargin" type="MarginContainer" parent="DiagnosticsPanelC"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PopupVBox" type="VBoxContainer" parent="DiagnosticsPanelC/PopupMargin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PopupTitle" type="Label" parent="DiagnosticsPanelC/PopupMargin/PopupVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "SAFE MODE"
horizontal_alignment = 1

[node name="PopupText" type="RichTextLabel" parent="DiagnosticsPanelC/PopupMargin/PopupVBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Диагностический отчёт."
fit_content = true

[node name="PopupBtnNext" type="Button" parent="DiagnosticsPanelC/PopupMargin/PopupVBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
text = "ДАЛЕЕ"

[connection signal="pressed" from="DiagnosticsPanelC/PopupMargin/PopupVBox/PopupBtnNext" to="." method="_on_diagnostics_close_pressed"]